--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,61 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FA878F8F"
+    android:background="@drawable/loginback"
     tools:context=".login_page">
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="265dp"
-        android:layout_height="216dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/nilwala" />
 
     <TextView
         android:id="@+id/tv_login"
-        android:layout_width="182dp"
-        android:layout_height="37dp"
+        android:layout_width="180dp"
+        android:layout_height="45dp"
         android:layout_marginStart="144dp"
         android:layout_marginLeft="144dp"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
         android:text="Login"
-        android:textColor="#186C06"
+        android:textColor="@color/purple_500"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <TextView
         android:id="@+id/tv_kuser1"
         android:layout_width="220dp"
         android:layout_height="35dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginRight="145dp"
         android:text="Enter Email Address"
         android:textColor="#0B0A0A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_login" />
 
     <TextView
         android:id="@+id/tv_kpwd1"
         android:layout_width="220dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
+        android:layout_height="27dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginRight="145dp"
         android:text="Password"
         android:textColor="#101010"
         android:textSize="20sp"
@@ -70,11 +51,7 @@
         android:id="@+id/pt_email"
         android:layout_width="220dp"
         android:layout_height="40dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginRight="145dp"
         android:ems="10"
         android:hint="@string/pt_email1"
         android:inputType="textPersonName"
@@ -82,17 +59,14 @@
         android:textColor="#473E3E"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_kuser1" />
 
     <EditText
         android:id="@+id/pw_pwd"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
-        android:layout_marginEnd="145dp"
-        android:layout_marginRight="145dp"
+        android:layout_width="216dp"
+        android:layout_height="32dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +82,7 @@
         android:hint="@string/btn_klogin"
         android:text="Login"
         android:textColor="#0B0909"
-        app:backgroundTint="#04435C"
+        app:backgroundTint="#673AB7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,13 +92,9 @@
         android:id="@+id/tv_kif"
         android:layout_width="250dp"
         android:layout_height="23dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="115dp"
-        android:layout_marginRight="115dp"
         android:text="If you haven't Account, please Sign Up"
-        android:textColor="#B52B2B"
+        android:textColor="#00BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_klogin" />
@@ -137,11 +107,27 @@
         android:layout_marginBottom="84dp"
         android:hint="@string/btn_ksignUp"
         android:text="Sign Up"
-        android:textColor="#858282"
+        android:textColor="#673AB7"
         android:textSize="12sp"
         app:backgroundTint="#100909"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_kif" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="296dp"
+        android:layout_height="237dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/nilwala2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
