--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ph_kNum"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundreg"
+    android:background="@drawable/loginback"
     tools:context=".Add_Teacher">
 
     <TextView
