--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundreg"
+    android:background="@drawable/loginback"
     tools:context=".Registration_page">
 
     <TextView
@@ -17,6 +17,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="Register"
+        android:textColor="#2196F3"
         android:textSize="34sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_kcancel1"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +29,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="20dp"
         android:text="First Name"
-        android:textColor="#101010"
+        android:textColor="#F1EEEE"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +41,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="20dp"
         android:text="Last Name"
-        android:textColor="#0C0C0C"
+        android:textColor="#FBF9F9"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -53,7 +54,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:text="Email"
-        android:textColor="#070707"
+        android:textColor="#F8F6F6"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -66,7 +67,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:text="Confirm Password"
-        android:textColor="#070707"
+        android:textColor="#F8F4F4"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -79,7 +80,7 @@
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:text="Password"
-        android:textColor="#090909"
+        android:textColor="#FBFBFB"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -94,7 +95,8 @@
         android:layout_marginBottom="20dp"
         android:hint="@string/btn_kregister"
         android:text="Register"
-        android:textColor="#0587AE"
+        android:textColor="#010B0E"
+        app:backgroundTint="#03A9F4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -110,7 +112,7 @@
         android:hint="@string/pt_kfname"
         android:inputType="textPersonName"
         android:text="Enter First Name"
-        android:textColor="#F8F5F5"
+        android:textColor="#8A7E7E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +127,7 @@
         android:hint="@string/pt_kllname"
         android:inputType="textPersonName"
         android:text="Enter Last Name"
-        android:textColor="#F8F5F5"
+        android:textColor="#8A7E7E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +142,7 @@
         android:hint="@string/pt_kemail2"
         android:inputType="textPersonName"
         android:text="Enter Email"
-        android:textColor="#FAF6F6"
+        android:textColor="#8A7E7E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +157,7 @@
         android:hint="@string/pt_kpwd3"
         android:inputType="textPersonName"
         android:text="Enter Password"
-        android:textColor="#F8F3F3"
+        android:textColor="#8A7E7E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +172,7 @@
         android:hint="@string/pt_kcompwd2"
         android:inputType="textPersonName"
         android:text="Confirm Above Password"
-        android:textColor="#FBF8F8"
+        android:textColor="#8A7E7E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -187,6 +189,7 @@
         android:layout_marginRight="20dp"
         android:hint="@string/btn_kcancel1"
         android:text="Cancel"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_kregister"
         app:layout_constraintTop_toTopOf="parent" />
