--- a/app/src/main/res/layout/activity_add_teacher.xml
+++ b/app/src/main/res/layout/activity_add_teacher.xml
@@ -244,6 +244,7 @@
         android:layout_marginBottom="41dp"
         android:hint="@string/btn_ksubmit"
         android:text="Submit"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -256,7 +257,7 @@
         android:layout_width="411dp"
         android:layout_height="53dp"
         android:layout_marginBottom="1dp"
-        android:background="#2FB1EC"
+        android:background="#00BCD4"
         app:layout_constraintBottom_toTopOf="@+id/tv_kadd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
