--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="85dp"
         android:layout_marginRight="85dp"
         android:text="Login"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/colorPurple"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
         android:layout_height="23dp"
         android:layout_marginTop="20dp"
         android:text="If you haven't Account, please Sign Up"
-        android:textColor="#00BCD4"
+        android:textColor="#673AB7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_klogin" />
