--- a/app/src/main/res/layout/activity_teacher_management.xml
+++ b/app/src/main/res/layout/activity_teacher_management.xml
@@ -31,6 +31,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="64dp"
         android:text="@string/btn_kbutton1"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +47,7 @@
         android:layout_marginEnd="108dp"
         android:layout_marginRight="108dp"
         android:text="@string/btn_kview1"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_kbutton1" />
@@ -95,6 +97,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="40dp"
         android:text="Update / Delete Details"
+        app:backgroundTint="#00BCD4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_kview1" />
