--- a/app/src/main/res/layout/activity_hall_home.xml
+++ b/app/src/main/res/layout/activity_hall_home.xml
@@ -30,7 +30,7 @@
         android:id="@+id/button8"
         android:layout_width="201dp"
         android:layout_height="58dp"
-        android:text="Add Hall"
+        android:text="@string/N_H_haddhall"
         app:backgroundTint="@color/homeC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/button10"
         android:layout_width="201dp"
         android:layout_height="69dp"
-        android:text="View Hall Details"
+        android:text="@string/N_H_hviewhall"
         app:backgroundTint="@color/homeC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +54,7 @@
         android:id="@+id/button11"
         android:layout_width="201dp"
         android:layout_height="69dp"
-        android:text="Available Teacher"
+        android:text="@string/N_H_havailableteacher"
         app:backgroundTint="@color/homeC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
