--- a/app/src/main/res/layout/activity_hall_view_de.xml
+++ b/app/src/main/res/layout/activity_hall_view_de.xml
@@ -16,6 +16,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/textView37"
+            android:layout_width="252dp"
+            android:layout_height="35dp"
+            android:text="MBN 045"
+            android:textColor="#FDFCFC"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="44dp"
@@ -34,8 +46,9 @@
         android:id="@+id/button9"
         android:layout_width="189dp"
         android:layout_height="56dp"
-        android:text="Update"
+        android:text="@string/N_H_hhupdate"
         android:textSize="20sp"
+        app:backgroundTint="@color/purple_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -47,8 +60,9 @@
         android:id="@+id/button12"
         android:layout_width="189dp"
         android:layout_height="56dp"
-        android:text="Delete"
+        android:text="@string/N_H_hhdelete"
         android:textSize="20sp"
+        app:backgroundTint="@color/purple_700"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -61,7 +75,10 @@
         android:layout_width="278dp"
         android:layout_height="47dp"
         android:ems="10"
+        android:hint="@string/H_N_hhviewcapacity"
         android:inputType="textPersonName"
+        android:text="    1200"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -74,7 +91,10 @@
         android:layout_width="278dp"
         android:layout_height="47dp"
         android:ems="10"
+        android:hint="@string/N_H_hhviewid"
         android:inputType="textPersonName"
+        android:text="    MBN 045"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -87,7 +107,10 @@
         android:layout_width="278dp"
         android:layout_height="47dp"
         android:ems="10"
+        android:hint="@string/N_H_hhview"
         android:inputType="textPersonName"
+        android:text="    A/C"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -100,7 +123,10 @@
         android:layout_width="278dp"
         android:layout_height="47dp"
         android:ems="10"
+        android:hint="@string/N_H_hhviewmanager"
         android:inputType="textPersonName"
+        android:text="    M.D Perera"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -113,7 +139,10 @@
         android:layout_width="278dp"
         android:layout_height="47dp"
         android:ems="10"
+        android:hint="@string/N_H_hhviewteacher"
         android:inputType="textPersonName"
+        android:text="    K.Gayan / H.Kanishka"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
