--- a/app/src/main/res/layout/activity_hall_view_hdata.xml
+++ b/app/src/main/res/layout/activity_hall_view_hdata.xml
@@ -88,10 +88,13 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName13"
-        android:layout_width="84dp"
-        android:layout_height="38dp"
+        android:layout_width="93dp"
+        android:layout_height="42dp"
         android:ems="10"
+        android:hint="@string/N_H_hdhallnumber"
         android:inputType="textPersonName"
+        android:text="    5"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.691"
@@ -104,7 +107,10 @@
         android:layout_width="338dp"
         android:layout_height="59dp"
         android:ems="10"
+        android:hint="@string/N_H_hd1"
         android:inputType="textPersonName"
+        android:text="     MBN 045"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
@@ -117,7 +123,10 @@
         android:layout_width="338dp"
         android:layout_height="59dp"
         android:ems="10"
+        android:hint="@string/N_H_hd2"
         android:inputType="textPersonName"
+        android:text="     GBN 022"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
@@ -130,7 +139,10 @@
         android:layout_width="338dp"
         android:layout_height="59dp"
         android:ems="10"
+        android:hint="@string/N_H_hd3"
         android:inputType="textPersonName"
+        android:text="     JBN 003"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
@@ -143,7 +155,10 @@
         android:layout_width="338dp"
         android:layout_height="59dp"
         android:ems="10"
+        android:hint="@string/N_H_hd4"
         android:inputType="textPersonName"
+        android:text="     RBN 012"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
@@ -156,7 +171,10 @@
         android:layout_width="338dp"
         android:layout_height="59dp"
         android:ems="10"
+        android:hint="@string/N_H_hd5"
         android:inputType="textPersonName"
+        android:text="     MBN 006"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
