--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="colorPurple">#4a148c</color>
     <color name="gold">#DD9830</color>
     <color name="homeC">#010618</color>
+    <color name="green">#41CA06</color>
+    <color name="darkgreen">#102502</color>
 
 
 </resources>
